<resources>
    <string name="app_name">exercicio1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clientes">Clientes</string>
    <string name="genero">Genero</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="submit">submit</string>
    <string name="tipo">Tipo</string>
    <string name="marca">Marca</string>
    <string name="nome">Nome</string>
</resources>